# ibattery-sdk

./: .editorconfig  .gitignore  404.html  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig.ibattery  LICENSE  README.md  index.html  library.json  mkdocs.yml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  firmware.yml
ARCHITECTURE/: index.html
BATTERY_PROFILES/: index.html
HARDWARE_TROUBLESHOOTING/: index.html
RELEASE_NOTES/: index.html
ROADMAP/: index.html
SDK_API/: index.html
SESSION_HANDOFF_2026-05-24/: index.html
SESSION_HANDOFF_2026-05-29/: index.html
TESTING/: index.html
WIRING/: index.html
app/: CMakeLists.txt  Kconfig  Kconfig.battery  prj.conf
app/boards/: esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32c3_devkitm_current.conf  esp32c3_devkitm_median.conf  nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_current.conf  nrf52840dk_nrf52840_i2cscan.conf  nucleo_l476rg.conf  nucleo_l476rg.overlay  nucleo_l476rg_ble.conf  nucleo_l476rg_ble_current.conf  nucleo_l476rg_i2cscan.conf
app/src/: main.c
articles/2026-05-11-coulomb-counting-and-hardware-drama/: index.html
articles/2026-05-29-swap-the-mcu/: index.html
articles/2026-05-29-swap-the-mcu-discord/: index.html
articles/2026-05-29-swap-the-mcu-hackaday/: index.html
articles/2026-05-29-swap-the-mcu-reddit/: index.html
captures/: index.html
cloud/: README.md  docker-compose.yml  index.html
cloud/grafana/provisioning/dashboards/: battery.json  dashboard.yml
cloud/grafana/provisioning/datasources/: influxdb.yml
contributing/: index.html
docs/: ARCHITECTURE.md  BATTERY_PROFILES.md  DEVELOPMENT_ROADMAP.md  HARDWARE_TROUBLESHOOTING.md  PHASE1_STEP3.md  RELEASE_NOTES.md  ROADMAP.md  SDK_API.md  SESSION_HANDOFF_2026-05-24.md  SESSION_HANDOFF_2026-05-29.md  TESTING.md  WIRING.md  contributing.md  gateway.md  index.md
docs/articles/: 2026-05-11-coulomb-counting-and-hardware-drama.md  2026-05-29-swap-the-mcu-discord.md  2026-05-29-swap-the-mcu-hackaday.md  2026-05-29-swap-the-mcu-reddit.md  2026-05-29-swap-the-mcu.md
docs/captures/: README.md
docs/plans/: 2026-04-13-advanced-soc-coulomb-counting-design.md  2026-04-13-coulomb-counting-plan.md  2026-04-14-voltage-smoothing-design.md  2026-04-14-voltage-smoothing-plan.md  2026-05-29-phase-8c-fusion-design.md  2026-05-29-phase-8c-fusion-plan.md  2026-05-29-phase-8d-soh-design.md  2026-05-29-phase-8d-soh-plan.md  2026-05-29-soh-cloud-design.md  2026-05-29-soh-cloud-plan.md
gateway/: README.md  index.html  pyproject.toml
gateway/gateway/: __init__.py  cli.py  config.py  decoder.py  influxdb_writer.py  scanner.py
gateway/gateway/analytics/: __init__.py  anomaly_detector.py  cycle_analyzer.py  health_score.py  realtime.py  rul_estimator.py
gateway/grafana/: ibattery-dashboard.json
gateway/tests/: test_cycle_analyzer.py  test_decoder.py  test_health_score.py  test_realtime.py  test_rul_estimator.py  test_scanner.py  test_writer.py
include/battery_sdk/: battery_adc.h  battery_coulomb.h  battery_cycle_counter.h  battery_hal_current.h  battery_power_manager.h  battery_sdk.h  battery_soc_estimator.h  battery_soc_fusion.h  battery_soh.h  battery_status.h  battery_telemetry.h  battery_temperature.h  battery_transport.h  battery_types.h  battery_voltage.h
launch/: devto_article.md  devto_article_2_hal_design.md  hackernews_show_hn.md  launch_day_results.md  linkedin_post.md  reddit_karma_comments.md  reddit_karma_comments_day2.md  reddit_karma_comments_day3.md  reddit_r_embedded.md  reddit_r_esp32.md  reddit_r_zephyr.md  youtube_video_guide.md
plans/2026-04-13-advanced-soc-coulomb-counting-design/: index.html
plans/2026-04-13-coulomb-counting-plan/: index.html
plans/2026-04-14-voltage-smoothing-design/: index.html
plans/2026-04-14-voltage-smoothing-plan/: index.html
plans/2026-05-29-phase-8c-fusion-design/: index.html
plans/2026-05-29-phase-8c-fusion-plan/: index.html
plans/2026-05-29-phase-8d-soh-design/: index.html
plans/2026-05-29-phase-8d-soh-plan/: index.html
plans/2026-05-29-soh-cloud-design/: index.html
plans/2026-05-29-soh-cloud-plan/: index.html
search/: search_index.json
src/: app_config.h  battery_adc.h
src/core/: battery_internal.h  battery_sdk.c
src/core_modules/: battery_adc.c  battery_adc.h  battery_power_manager.c  battery_temperature.c  battery_voltage.c  battery_voltage_filter.c  battery_voltage_filter.h  battery_voltage_filter_median.c
src/hal/: battery_hal.h  battery_hal_adc_zephyr.c  battery_hal_charger.h  battery_hal_charger_tp4056_zephyr.c  battery_hal_current_stub.c  battery_hal_current_zephyr.c  battery_hal_nvs.h  battery_hal_nvs_stub.c  battery_hal_nvs_zephyr.c  battery_hal_temp_ntc_zephyr.c  battery_hal_temp_zephyr.c  battery_hal_zephyr.c
src/hal/helpers/: battery_adc_platform.h
src/intelligence/: battery_coulomb.c  battery_cycle_counter.c  battery_ntc_lut.c  battery_ntc_lut.h  battery_soc_estimator.c  battery_soc_fusion.c  battery_soc_lut.c  battery_soc_lut.h  battery_soc_temp_comp.c  battery_soc_temp_comp.h  battery_soh.c
src/telemetry/: battery_telemetry.c  battery_telemetry.h
src/transport/: battery_serialize.c  battery_serialize.h  battery_transport.c
src/transport/ble/: battery_transport_ble_zephyr.c
tests/: CMakeLists.txt  MANUAL_TEST_PHASE5B.md  test_coulomb.c  test_cycle_counter.c  test_hal_current_stub.c  test_ntc_lut.c  test_power_manager.c  test_serialize.c  test_soc_coulomb.c  test_soc_coulomb_cr2032.c  test_soc_estimator_fusion.c  test_soc_fusion.c  test_soc_lut.c  test_soc_slew_limit.c  test_soc_soh.c  test_soc_soh_estimator.c  test_soc_temp_comp.c  test_telemetry.c  test_temperature.c  test_transport.c  test_voltage_filter.c  test_voltage_filter_median.c
tests/mocks/: mock_charger.c  mock_current.c  mock_cycle_counter.c  mock_hal.c  mock_nvs.c  mock_power.c  mock_sdk_state.c  mock_soc.c  mock_temperature.c  mock_transport.c  mock_voltage.c
tools/i2c-analyzer/: README.md  capture.sh
zephyr/: module.yml
